@@ -1,3 +1,5 @@
+* Manage same input and storage location in customer return shipment
+
 Version 4.8.0 - 2018-04-23
 * Bug fixes (see mercurial logs for details)
 * Add _stock_move_split context keyword when copying move for split
